# xstd-compress

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  archivemodel.cc  archivemodel.h  main.cc  mainwindow.cc  mainwindow.h  welcomewidget.cc  welcomewidget.h
cli/: CMakeLists.txt  main.cc  util.cc  util.h
cli/commands/: add.cc  add.h  compress.cc  compress.h  create.cc  create.h  delete.cc  delete.h  extract.cc  extract.h  info.cc  info.h  list.cc  list.h  recover.cc  recover.h
src/: archive.cc  archive.h  archive_reader.cc  archive_reader.h  archive_writer.cc  archive_writer.h  btree.h  catalog.cc  catalog.h  compression.cc  compression.h  constants.h  encryption.cc  encryption.h  hasher.cc  hasher.h  iohandler.cc  iohandler.h  metadata.h  page_manager.cc  page_manager.h  sha256.cc  sha256.h  types.h  xstd_errors.h  xxhasher.h
tests/: CMakeLists.txt  archive_test.cc  btree_test.cc  compression_test.cc  encryption_test.cc  hasher_test.cc  page_manager_test.cc
